[package]
name = "audionimbus-demo"
description = "An interactive demo of AudioNimbus."
version = "0.1.0"
edition = "2021"
authors = ["Maxence Maire <maire.maxence@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/MaxenceMaire/audionimbus-demo"
readme = "README.md"

[dependencies]
audionimbus = { path = "../audionimbus/audionimbus" }
bevy = "0.15.3"
bevy_rapier3d = "0.29.0"
rodio = "0.20.1"
